thrasyboulos/hydor/base/attike/eupalinos/cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: trace-to-eupalinos
  namespace: attike
spec:
  description: "Allow all pods in attike namespace to access Eupalinos"
  endpointSelector:
    matchLabels:
      app: eupalinos-attike
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: attike
      toPorts:
        - ports:
            - port: "50060"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: trace-to-eupalinos
  namespace: attike
spec:
  description: "Allow all pods in olympia namespace to access Eupalinos"
  endpointSelector:
    matchLabels:
      app: eupalinos-attike
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: olympia
      toPorts:
        - ports:
            - port: "50060"
              protocol: TCP
